Updated day1 implementation to use newly added utils.

--- a/2015/makefile
+++ b/2015/makefile
@@ -1,5 +1,7 @@
 ## Simple makefile used to compile my targets.
 
+FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0
+
 ## Show help.
 help:
 	@echo "Usage: make <source_file>.cpp"
@@ -7,7 +9,7 @@ help:
 ## Generic rule to handle cpp file targets.
 ## Example: `make day1`
 %: %.cpp
-	g++ -Wall -Werror -pedantic -g -O0 $< -o $@.exe
+	g++ $(FLAGS) $(<) -o $(@).exe
 
 ## Since I'm adding the ".exe" extension, cleaning up is simple.
 clean:
