--- a/2015/makefile
+++ b/2015/makefile
@@ -1,15 +1,24 @@
 ## Simple makefile used to compile my targets.
-
 FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0
 
 ## Show help.
 help:
 	@echo "Usage: make <source_file>.cpp"
 
+## Run unit tests as needed!
+test:
+	@echo "--------------------------------------------"
+	@echo "Compiling test files ..."
+	@echo "--------------------------------------------"
+	g++ -DUNIT_TEST=true $(FLAGS) util.cpp -o util.exe && ./util.exe
+
 ## Generic rule to handle cpp file targets.
 ## Example: `make day1`
-%: %.cpp
-	g++ $(FLAGS) $(<) -o $(@).exe
+%: %.cpp test
+	@echo "--------------------------------------------"
+	@echo "Compiling '$(@).exe' ..."
+	@echo "--------------------------------------------"
+	g++ $(FLAGS) $(<) util.cpp -o $(@).exe
 
 ## Since I'm adding the ".exe" extension, cleaning up is simple.
 clean:
