Fix 'make help' command

--- a/2015/makefile
+++ b/2015/makefile
@@ -3,7 +3,7 @@ FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0
 
 ## Show help.
 help:
-	@echo "Usage: make <source_file>.cpp"
+	@echo "Usage:\n\tCompile Challenge:\tmake <source_file_without_cpp>\n\tRun Tests:\t\tmake test"
 
 ## Run unit tests as needed!
 test:
