Adding day4 challenge updates

--- a/2015/makefile
+++ b/2015/makefile
@@ -1,5 +1,18 @@
 ## Simple makefile used to compile my targets.
-FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0
+
+## Use aggressive optimizations by default.
+## Example for debugging do: `DEBUG=true make dayX`
+FLAGS=-Wall -Werror -pedantic -std=c++20 -O3
+ifeq ($(DEBUG), true)
+	FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0
+endif
+
+## If cryptography libs are needed.
+## Example: `CRYPTO=true make dayX`
+ifeq ($(CRYPTO), true)
+	CRYPTO_FLAGS=-lssl -lcrypto
+endif
+
 
 ## Show help.
 help:
@@ -14,14 +27,14 @@ test:
 	@echo "--------------------------------------------"
 	g++ -DUTIL_UNIT_TEST=true $(FLAGS) libs/util.cpp -o util.exe && ./util.exe
 
-## Generic rule to handle cpp file targets.
-## Example: `make day1`
-%: %.cpp test
-	@echo "----------------------------------------------"
-	@echo "Compiling and attempting run of '$(@).exe' ..."
-	@echo "----------------------------------------------"
-	g++ $(FLAGS) $(<) libs/util.cpp -o $(@).exe && ./$(@).exe
-
 ## Since I'm adding the ".exe" extension, cleaning up is simple.
 clean:
 	@rm -f *.exe
+
+## Generic rule to handle cpp file targets.
+## Example: `make dayX`
+%: %.cpp
+	@echo "----------------------------------------------"
+	@echo "Compiling and attempting run of '$(@).exe' ..."
+	@echo "----------------------------------------------"
+	g++ $(FLAGS) $(<) libs/util.cpp -o $(@).exe $(CRYPTO_FLAGS) && ./$(@).exe
