Reorganized repo a bit so my custom lib can be more easily used by later year solutions.

--- a/libs/makefile
+++ b/libs/makefile
@@ -11,29 +11,6 @@ endif
 INCS=-I/usr/include -I../
 LIBS=-L/usr/lib
 
-OS:=$(shell uname)
-ifeq ($(OS), Darwin)  # macOS
-	OPENSSL_PREFIX = $(shell brew --prefix openssl 2>/dev/null)
-	ifneq ($(OPENSSL_PREFIX),)
-		INCS+=-I$(OPENSSL_PREFIX)/include
-		LIBS+=-L$(OPENSSL_PREFIX)/lib
-	endif
-endif
-
-## Linker stuff
-LIB_FLAGS=
-## If cryptography libs are needed.
-## Example: `CRYPTO=true make dayX`
-ifeq ($(CRYPTO), true)
-	LIB_FLAGS+=-lssl -lcrypto
-endif
-
-## Show help.
-help:
-	@echo "Usage:"
-	@echo "\tCompile Challenge:\tmake <source_file_without_cpp>"
-	@echo "\tRun Tests:\t\tmake test"
-
 ## Since I'm adding the ".exe" extension, cleaning up is simple.
 clean:
 	@rm -f *.exe
@@ -44,4 +21,4 @@ clean:
 	@echo "----------------------------------------------"
 	@echo "Compiling and attempting run of '$(@).exe' ..."
 	@echo "----------------------------------------------"
-	g++ $(FLAGS) $(<) ../libs/util.cpp $(INCS) $(LIBS) -o $(@).exe $(LIB_FLAGS) && ./$(@).exe
+	g++ -DUNIT_TEST=true $(FLAGS) $(<) $(INCS) $(LIBS) -o $(@).exe $(LIB_FLAGS) && ./$(@).exe
