Update 2015 solution makefile to use c++23 and the new libaocutil.so shared-library.

--- a/2015/makefile
+++ b/2015/makefile
@@ -1,31 +1,31 @@
 ## Simple makefile used to compile my targets.
+CXX=clang++
+STD=-std=c++23
 
 ## Use aggressive optimizations by default.
 ## Example for debugging do: `DEBUG=true make dayX`
-FLAGS=-Wall -Werror -pedantic -std=c++20 -O3
+FLAGS=-Wall -Werror -pedantic $(STD) -O3
 ifeq ($(DEBUG), true)
-	FLAGS=-Wall -Werror -pedantic -std=c++20 -g -O0 -fconcepts-diagnostics-depth=2
+	FLAGS=-Wall -Werror -pedantic $(STD) -g -O0 -fconcepts-diagnostics-depth=2
 endif
 
-## Additional compilation flags for includes and libs
+## Additional compilation/linker flags
 INCS=-I/usr/include -I../
-LIBS=-L/usr/lib
+LDFLAGS=-L/usr/lib -L../libs -laocutil
+LD_LIBRARY_PATH:=../libs:$(LD_LIBRARY_PATH)
 
-OS:=$(shell uname)
-ifeq ($(OS), Darwin)  # macOS
-	OPENSSL_PREFIX = $(shell brew --prefix openssl 2>/dev/null)
-	ifneq ($(OPENSSL_PREFIX),)
-		INCS+=-I$(OPENSSL_PREFIX)/include
-		LIBS+=-L$(OPENSSL_PREFIX)/lib
-	endif
-endif
-
-## Linker stuff
-LIB_FLAGS=
 ## If cryptography libs are needed.
 ## Example: `CRYPTO=true make dayX`
-ifeq ($(CRYPTO), true)
-	LIB_FLAGS+=-lssl -lcrypto
+ifeq ($(CRYPTO),true)
+	LDFLAGS+=-lssl -lcrypto
+	OS:=$(shell uname)
+	ifeq ($(OS), Darwin) # MacOS
+		OPENSSL_PREFIX=$(shell brew --prefix openssl 2>/dev/null)
+		ifneq ($(OPENSSL_PREFIX),)
+			INCS+=-I$(OPENSSL_PREFIX)/include
+			LDFLAGS+=-L$(OPENSSL_PREFIX)/lib
+		endif
+	endif
 endif
 
 ## Show help.
@@ -38,10 +38,13 @@ help:
 clean:
 	@rm -f *.exe
 
+../libs/libaocutil.so:
+	$(MAKE) -C ../libs libaocutil.so
+
 ## Generic rule to handle cpp file targets.
 ## Example: `make dayX`
-%: %.cpp
+%: %.cpp ../libs/libaocutil.so
 	@echo "----------------------------------------------"
 	@echo "Compiling and attempting run of '$(@).exe' ..."
 	@echo "----------------------------------------------"
-	g++ $(FLAGS) $(<) ../libs/util.cpp $(INCS) $(LIBS) -o $(@).exe $(LIB_FLAGS) && ./$(@).exe
+	$(CXX) $(FLAGS) $(INCS) -o $(@).exe $(<) $(LDFLAGS) && ./$(@).exe
