Add some makefile updates so we can work on both linux and macos.

--- a/2015/makefile
+++ b/2015/makefile
@@ -47,4 +47,4 @@ clean:
 	@echo "----------------------------------------------"
 	@echo "Compiling and attempting run of '$(@).exe' ..."
 	@echo "----------------------------------------------"
-	$(CXX) $(FLAGS) $(INCS) -o $(@).exe $(<) $(LDFLAGS) && ./$(@).exe
+	$(CXX) $(FLAGS) $(INCS) -o $(@).exe $(<) $(LDFLAGS) && LD_LIBRARY_PATH=../libs ./$(@).exe
