--- a/libs/makefile
+++ b/libs/makefile
@@ -1,10 +1,22 @@
 ## Simple makefile used to compile my targets.
 
+## Compiler settings
+CXX=clang++
+STD=-std=c++23
+
+## Detect the OS if not windows
+ifneq ($(OS),Windows_NT)
+	OS:=$(shell uname -s)
+endif
+
 ## Use aggressive optimizations by default.
 ## Example for debugging do: `DEBUG=true make dayX`
-FLAGS=-Wall -Werror -pedantic -std=c++23 -O3
+FLAGS=-Wall -Werror -pedantic $(STD) -O3
 ifeq ($(DEBUG), true)
-	FLAGS=-Wall -Werror -pedantic -std=c++23 -g -O0
+	FLAGS=-Wall -Werror -pedantic $(STD) -g -O0
+	ifeq ($(OS), Darwin) # MacOS
+	  FLAGS+=-fconcepts-diagnostics-depth=2
+	endif
 endif
 
 ## Additional compilation flags for includes and libs
@@ -20,9 +32,10 @@ libaocutil.so:
 	@echo "Compiling shared library '$(@)' ..."
 	@echo "----------------------------------------------"
 ifeq ($(OS), Darwin) # MacOS
-	g++ $(FLAGS) util.cpp $(INCS) $(LIBS) -Wl,-install_name,../libs/$(@) -shared -fPIC -o $(@) $(LIB_FLAGS)
+	$(CXX) $(FLAGS) util.cpp $(INCS) $(LIBS) -Wl,-install_name,../libs/$(@) -shared -fPIC -o $(@) $(LIB_FLAGS)
 else
-	g++ $(FLAGS) util.cpp $(INCS) $(LIBS) -shared -fPIC -o $(@) $(LIB_FLAGS)
+	@echo "OS: $(OS)"
+	$(CXX) $(FLAGS) util.cpp $(INCS) $(LIBS) -shared -fPIC -o $(@) $(LIB_FLAGS)
 endif
 
 ## Generic rule to handle cpp file targets.
@@ -31,5 +44,5 @@ endif
 	@echo "----------------------------------------------"
 	@echo "Compiling and attempting run of '$(@).exe' ..."
 	@echo "----------------------------------------------"
-	g++ -DUNIT_TEST=true $(FLAGS) $(<) $(INCS) $(LIBS) -o $(@).exe $(LIB_FLAGS) && ./$(@).exe && rm $(@).exe
+	$(CXX) -DUNIT_TEST=true $(FLAGS) $(<) $(INCS) $(LIBS) -o $(@).exe $(LIB_FLAGS) && ./$(@).exe && rm $(@).exe
 
