Migrated Utils namespace to aoc, updated 2015 solutions accordingly, some random other changes and experimentation.

--- a/2015/makefile
+++ b/2015/makefile
@@ -1,8 +1,12 @@
 ## Simple makefile used to compile my targets.
 
-## Compiler settings
+## Common Vars
 CXX=clang++
 STD=-std=c++23
+CUSTOM_LIBS=../libs
+AOC_LIB=libaocutil.so
+INCS=-I../
+LINKER_FLAGS=-L$(CUSTOM_LIBS) -laocutil
 
 ## Detect the OS if not windows
 ifneq ($(OS),Windows_NT)
@@ -11,29 +15,25 @@ endif
 
 ## Use aggressive optimizations by default.
 ## Example for debugging do: `DEBUG=true make dayX`
-FLAGS=-Wall -Werror -pedantic $(STD) -O3
+OPT_FLAGS=-Wall -Werror -pedantic $(STD) -O3
 ifeq ($(DEBUG), true)
-	FLAGS=-Wall -Werror -pedantic $(STD) -g -O0
+	OPT_FLAGS=-Wall -Werror -pedantic $(STD) -g -O0
 	ifeq ($(OS), Darwin) # MacOS
-	  FLAGS+=-fconcepts-diagnostics-depth=2
+	  OPT_FLAGS+=-fconcepts-diagnostics-depth=2
 	endif
 endif
 
-## Additional compilation/linker flags
-INCS=-I/usr/include -I../
-LDFLAGS=-L/usr/lib -L../libs -laocutil
-LD_LIBRARY_PATH:=../libs:$(LD_LIBRARY_PATH)
 
 ## If cryptography libs are needed.
 ## Example: `CRYPTO=true make dayX`
 ifeq ($(CRYPTO),true)
-	LDFLAGS+=-lssl -lcrypto
+	LINKER_FLAGS+=-lssl -lcrypto
 	OS:=$(shell uname)
 	ifeq ($(OS), Darwin) # MacOS
 		OPENSSL_PREFIX=$(shell brew --prefix openssl 2>/dev/null)
 		ifneq ($(OPENSSL_PREFIX),)
 			INCS+=-I$(OPENSSL_PREFIX)/include
-			LDFLAGS+=-L$(OPENSSL_PREFIX)/lib
+			LINKER_FLAGS+=-L$(OPENSSL_PREFIX)/lib
 		endif
 	endif
 endif
@@ -47,14 +47,15 @@ help:
 ## Since I'm adding the ".exe" extension, cleaning up is simple.
 clean:
 	@rm -f *.exe
+	$(MAKE) -C $(CUSTOM_LIBS) clean
 
-../libs/libaocutil.so:
-	$(MAKE) -C ../libs libaocutil.so
+$(CUSTOM_LIBS)/$(AOC_LIB):
+	$(MAKE) -C $(CUSTOM_LIBS) $(AOC_LIB)
 
 ## Generic rule to handle cpp file targets.
 ## Example: `make dayX`
-%: %.cpp ../libs/libaocutil.so
+%: %.cpp $(CUSTOM_LIBS)/libaocutil.so
 	@echo "----------------------------------------------"
 	@echo "Compiling and attempting run of '$(@).exe' ..."
 	@echo "----------------------------------------------"
-	$(CXX) $(FLAGS) $(INCS) -o $(@).exe $(<) $(LDFLAGS) && LD_LIBRARY_PATH=../libs ./$(@).exe
+	$(CXX) $(OPT_FLAGS) $(INCS) -o $(@).exe $(<) $(LINKER_FLAGS) && LD_LIBRARY_PATH=$(CUSTOM_LIBS) DEBUG=$(DEBUG) ./$(@).exe && rm $(@).exe
